# mistral-ocr-extractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mistral_ocr_extractor/: __init__.py  cli.py  config.py  exceptions.py
src/mistral_ocr_extractor/models/: annotations.py  ocr.py
src/mistral_ocr_extractor/services/: file_service.py  markdown_service.py  ocr_service.py
tests/: test_cli.py  test_config.py  test_file_service.py  test_markdown_service.py  test_ocr_service.py
